--- a/SFM/Management/newstyle.css
+++ b/SFM/Management/newstyle.css
@@ -163,7 +163,7 @@
 
 .tab {
     height: 40px;
-    width: 600px;
+    width: 100%;
     cursor: pointer;
     text-align: center;
     padding: 9px;
